# jr-granular

./: .clang-format  .clang-tidy  .gersemirc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  jr-granular.maxpat
.github/: release.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
Patcher/: jr-granular.maxpat
Resources/: FuturaMedium.cpp
RnboExport/: README.md  description.json  presets.json  rnbo_granular.cpp
Source/: CMakeLists.txt  EditorContent.cpp  EditorContent.h  ParamIDs.h  ParamNames.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/GUI/: CMakeLists.txt  Dial.cpp  Dial.h  EditorLnf.cpp  EditorLnf.h  FuturaMedium.h  MyColours.h
cmake/: CIEnv.cmake  Codesign.cmake  EnvCI.cmake  Notarization.cmake  Pluginval.cmake
export/: CMakeLists.txt  description.json  presets.json  rnbo_granular.cpp
export/rnbo/: version.cmake
export/rnbo/adapters/juce/: RNBO_JuceAudioProcessor.cpp
export/rnbo/adapters/max/: RNBO_MaxPlatformInterface.h
export/rnbo/common/: RNBO_Array.h  RNBO_EngineInterface.h  RNBO_PatcherEventTarget.h  RNBO_Version.h
export/rnbo/src/: RNBO_DynamicPatcherFactory.cpp  RNBO_EngineCore.h  RNBO_EventVariant.h  RNBO_NullPatcher.h  RNBO_ParameterInterfaceAsyncImpl.h  RNBO_PatcherEventSender.h
res/: jr-granular.maxpat  readme.txt
src/: CMakeLists.txt  EditorContent.h  ParamIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/ui/: CMakeLists.txt  Dial.cpp  Dial.h  EditorContent.cpp  EditorContent.h  EditorLnf.cpp  EditorLnf.h  MyColours.h
